eval: Align columns by test set not train set

--- a/notebooks/4_kfolds_cross_validation.ipynb
+++ b/notebooks/4_kfolds_cross_validation.ipynb
@@ -109,8 +109,8 @@
     "    x_test = pd.get_dummies(x_test, columns=categorical_columns, drop_first=True)\n",
     "\n",
     "    # Align the DataFrames by the columns\n",
-    "    x_test, x_train = x_test.align(x_train, join='left', axis=1)\n",
-    "    x_test, x_valid = x_test.align(x_valid, join='left', axis=1)\n",
+    "    x_test, x_train = x_test.align(x_train, join=\"left\", axis=1)\n",
+    "    x_test, x_valid = x_test.align(x_valid, join=\"left\", axis=1)\n",
     "\n",
     "    # Fill the missing values with 0\n",
     "    x_train.fillna(0, inplace=True)\n",
